lib/tests/compile-fail/nonzero_default_fail.rs
#[allow(unused_imports)]
use enum_extra::marker::NonZeroRepr;
use enum_extra_derive::NonZeroRepr;
use strum::EnumMetadata;

#[derive(NonZeroRepr)]
enum XYZZZ {
    A,
}


fn main() {
}